第9天学习,函数,用法查询笔记

--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -30,6 +30,18 @@ number = 153
 print(str(number) + expression + action + unit + magic)
 # 输出: 153＝1x1x1+5x5x5+3x3x3是个水仙花数
 ```
+> `print()` 的完整参数
+```python
+# print(*objects, sep = ' ', end = '\n', file = sys.stdout, flush = False)
+# 可以看到第一个参数objects带了*号，为不定长参数——这也是为什么print()函数可以传递任意数量的参数。
+# 其余四个为默认参数，我们可以通过修改默认值来改变参数
+# 对比一下下列代码的输出结果。
+print('金枪鱼', '三文鱼', '鲷鱼')  # 金枪鱼 三文鱼 鲷鱼
+print('金枪鱼', '三文鱼', '鲷鱼', sep = '+')  # 金枪鱼+三文鱼+鲷鱼
+# sep控制多个值之间的分隔符，默认是空格
+print('金枪鱼', '三文鱼', '鲷鱼', sep = '+', end = '=?')
+# end控制打印结果的结尾，默认是换行)  # 金枪鱼+三文鱼+鲷鱼=?
+```
 ### 2019年12月13日
 > 第2关 条件判断与条件嵌套
 ### 2019年12月14日
@@ -46,6 +58,78 @@ print(str(number) + expression + action + unit + magic)
 > 第8关 编程思维：如何解决问题
 ### 2019年12月20日
 > 第9关 函数
+- 函数的定义
+```python
+# 函数名：1. 名字最好能体现函数的功能，一般用小写字母和单下划线、数字等组合
+#      2. 不可与内置函数重名（内置函数不需要定义即可直接使用）
+def math(x):
+# 参数：根据函数功能，括号里可以有多个参数，也可以不带参数，命名规则与函数名相同
+# 规范：括号是英文括号，后面的冒号不能丢
+    y = x**2 + 5
+# 函数体：函数的执行过程，体现函数功能的语句，要缩进，一般是四个空格
+    return y
+# return语句：后面可以接多种数据类型，如果函数不需要返回值的话，可以省略
+
+# 提示：x ** y 表示 x的y次幂
+def comput(x):
+    y = x ** 2 + x
+    return y
+print(comput(8)) # 输出: 70
+```
+- 传参和默认值
+```python
+def menu(appetizer, course, dessert = '绿豆沙'):
+    print('一份开胃菜：' + appetizer)
+    print('一份主食：' + course)
+    print('一份甜品：' + dessert)
+menu('话梅花生','牛肉拉面')
+menu('话梅花生','牛肉拉面','银耳羹')
+#银耳羹对应参数dessert
+# 结果:
+# 一份开胃菜：话梅花生
+# 一份主食：牛肉拉面
+# 一份甜品：绿豆沙
+# 一份开胃菜：话梅花生
+# 一份主食：牛肉拉面
+# 一份甜品：银耳羹
+```
+- `random`和`time`工具库
+```python
+import time
+import random
+time.sleep(1)  # 停顿一秒 
+random.choice([1,'2',3,'四','五']) # 随机输出: 3
+```
+- 函数返回多个值
+```python
+import random 
+appetizer = ['话梅花生','拍黄瓜','凉拌三丝']
+def coupon(money):
+    if money < 5:
+        a = random.choice(appetizer)
+        return a
+    elif 5 < money < 10:
+        b = random.choice (appetizer)
+        return b, '溏心蛋'
+result = coupon(6)
+print(result)  # 输出随机结果: ('话梅花生', '溏心蛋')
+print(type(result))  # 输出: <class 'tuple'>
+# result是一个元组
+print(result[0])  # 输出随机结果: '话梅花生'
+print(result[1])  # 输出: '溏心蛋'
+```
+- 变量作用域
+```python
+quantity = 0
+def egg():    
+    global quantity  # 告诉Python 我希望使用全局的这个变量
+    quantity = 108
+egg()
+print(quantity)  # 输出: 108 
+```
+- 函数的嵌套 
+
+    与其他语言无异
 ### 2019年12月20日
 > 第10关 项目实操：PK小游戏（2）
 
