--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -1,5 +1,7 @@
 > ## Python 用法查询笔记
 
+## 目标一：别叫我萌新
+
 ### 2019年12月11日
 
 > 第0关 `print()` 函数与变量
@@ -46,6 +48,7 @@ print('金枪鱼', '三文鱼', '鲷鱼', sep = '+', end = '=?')
 > 第2关 条件判断与条件嵌套
 ### 2019年12月14日
 > 第3关 input()函数
+## 目标二：做出我的第一个项目
 ### 2019年12月15日
 > 第4关 列表和字典
 ### 2019年12月16日
@@ -54,6 +57,7 @@ print('金枪鱼', '三文鱼', '鲷鱼', sep = '+', end = '=?')
 > 第6关 布尔值和四种语句
 ### 2019年12月18日
 > 第7关 项目实操：PK小游戏（1）
+## 目标三：“编程思维”初探
 ### 2019年12月19日
 > 第8关 编程思维：如何解决问题
 ### 2019年12月20日
@@ -130,8 +134,9 @@ print(quantity)  # 输出: 108
 - 函数的嵌套 
 
     与其他语言无异
-### 2019年12月20日
+### 2019年12月21日
 > 第10关 项目实操：PK小游戏（2）
+
 
 - 数字取整的相关操作
 ```python
@@ -147,10 +152,26 @@ print(math.modf(4.25))  # (0.25, 4.0)
 print(math.modf(4.33))  # (0.33000000000000007, 4.0)
 # 最后一个应该是0.33，但是浮点数在计算机中是无法精确的表示小数的，python采用IEEE 754规范来存储浮点数。
 print(random.randint(10, 11))  # 范围内随机整数 a:开始范围,b:结束范围 开始值可结束值都包括在随机范围内
-
 ```
+- `index()`函数
 
+    index() 函数用于找出列表中某个元素第一次出现的索引位置。
+语法为：list.index(obj)，obj为object（对象）的缩写。
+具体可参考右侧的代码和运行结果。
+```python
+num = [0,1,0,1,2]
+print(num.index(1))  # 数字1首先出现的索引位置是list[1]（索引位置从0开始）。
+print(num.index(2))  # 数字2首先出现的索引位置是list[4]。
+```
+### 2019年12月22日
+> 第11关 编程思维：如何debug
 
+课堂：杀死那只“机”生虫！
+### 2019年12月23日
+### 2019年12月24日
+### 2019年12月25日
+### 2019年12月26日
+> 第99关
 
 
 
