第11天学习,if...in...:和多行注释

--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -55,6 +55,13 @@ print('金枪鱼', '三文鱼', '鲷鱼', sep = '+', end = '=?')
 > 第5关 for循环和while循环
 ### 2019年12月17日
 > 第6关 布尔值和四种语句
+
+- `if ... in ...:`的用法
+```python
+actor = ['黄轩', '染谷将太']
+if '黄轩' in actor:
+    print('{}存在于列表 {} 中'.format('黄轩',actor))
+```
 ### 2019年12月18日
 > 第7关 项目实操：PK小游戏（1）
 ## 目标三：“编程思维”初探
@@ -167,6 +174,16 @@ print(num.index(2))  # 数字2首先出现的索引位置是list[4]。
 > 第11关 编程思维：如何debug
 
 课堂：杀死那只“机”生虫！
+
+多行注释有两种快捷操作：1、在需要注释的多行代码块前后加一组三引号''' 2、选中代码后使用快捷键操作：Windows快捷键是ctrl+/，Mac为cmd+/，适用于本地编辑器
+```python
+# 单行注释
+'''
+这是
+多行
+注释
+'''
+```
 ### 2019年12月23日
 ### 2019年12月24日
 ### 2019年12月25日
