--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -184,6 +184,42 @@ print(num.index(2))  # 数字2首先出现的索引位置是list[4]。
 注释
 '''
 ```
+为了不让一些无关痛痒的小错影响程序的后续执行，Python给我们提供了一种异常处理的机制，可以在异常出现时即时捕获，然后内部消化掉，让程序继续运行。
+
+这就是`try…except…`语句，具体用法如下：
+```python
+try:
+    pass
+    # 尝试执行
+    # ....
+    # ....
+    # 代码要缩进
+except:
+    pass
+    # 除非发生 报错,***是报错类型;一旦报错就执行下列代码
+    # ....
+    # ....
+    # 报错后执行的代码,要缩进
+```
+报错类型的处理
+```python
+num = [1, 2, 0, 3]
+for x in num:
+    try:
+        # 尝试执行下列代码
+        print(6 / x)
+    # 使用6除以num中的元素，并打印
+    except ZeroDivisionError:
+        # 除非发生ZeroDivisionError报错，执行下列代码：
+        print('0是不能做除数的！')  # 打印“0是不能做除数的！”
+```
+最后，关于Python的所有报错类型，有需要的话可以在这里查阅：https://www.runoob.com/python/python-exceptions.html
+- 针对粗心造成的bug，有一份自检清单帮助大家检查。
+![](docs/img/L-10-13.png)
+
+0. 针对知识点不熟造成的bug，要记得多复习，查阅笔记，针对性地做练习掌握用法。
+0. 针对思维不清的bug，要多用print()函数和#注释一步步地排查错误。
+0. 针对容易被忽略的例外情况从而被动掉坑的bug，可以用try...except语句让程序顺利运行。
 ### 2019年12月23日
 ### 2019年12月24日
 ### 2019年12月25日
