第11天学习,深度理解笔记

--- a/code/深度理解笔记.md
+++ b/code/深度理解笔记.md
@@ -1,6 +1,6 @@
 ## 深度理解笔记
 ###### 2019年12月22日
-`input()` 输入的固定格式
+- `input()` 输入的固定格式
 ```python
 while True:
     txt = input('请输入点东西:')
@@ -11,3 +11,8 @@ while True:
         print('输入不通过,再试一次')
 print('程序结束')
 ```
+- 函数传参的必要性
+
+    大概就是,内部不再写死一个值,都交由外层去控制; 对外提供API
+    
+    四个大概念: 配置项,属性,方法,钩子
