--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -212,6 +212,13 @@ for x in num:
     except ZeroDivisionError:
         # 除非发生ZeroDivisionError报错，执行下列代码：
         print('0是不能做除数的！')  # 打印“0是不能做除数的！”
+    # 方式2：将两个（或多个）异常放在一起，只要触发其中一个，就执行所包含的代码。
+    except(ZeroDivisionError, ValueError):
+        print('你的输入有误，请重新输入！')
+    
+    # 方式3：常规错误的基类，假设不想提供很精细的提示，可以用这个语句响应常规错误。
+    except Exception:
+        print('你的输入有误，请重新输入！')
 ```
 最后，关于Python的所有报错类型，有需要的话可以在这里查阅：https://www.runoob.com/python/python-exceptions.html
 - 针对粗心造成的bug，有一份自检清单帮助大家检查。
