第12天学习,一次性说完

--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -254,6 +254,59 @@ while True:
 0. 针对思维不清的bug，要多用print()函数和#注释一步步地排查错误。
 0. 针对容易被忽略的例外情况从而被动掉坑的bug，可以用try...except语句让程序顺利运行。
 ### 2019年12月23日
+> 类与对象1 
+
+创建一个类
+```python
+# 下面，请你现学现用，创建一个“中国人”的类，并为其创建一个属性和一个方法。
+# 属性:眼睛是黑色的
+# 方法:打印出'吃饭，选择用筷子。'
+class Chinese:
+    eye = 'black'
+    
+    def eat(self):
+        print('吃饭，选择用筷子。')
+
+
+wufeng = Chinese()  # 类的实例化
+print(type(wufeng))
+print(wufeng)
+print(wufeng.eye)  # 实例调用类属性
+wufeng.eat()  # 调用类中的方法（传参不用管self）
+'''
+输出:
+<class '__main__.Chinese'>
+<__main__.Chinese object at 0x0000018B53FA2D88>
+black
+吃饭，选择用筷子。
+'''
+```
+- 创建类的两个关键点
+    - 特殊参数：self
+    
+    第一点：只要在类中用def创建方法时，就必须把第一个参数位置留给 self，并在调用方法时忽略它（不用给self传参）。
+
+    第二点：当在类的方法内部想调用类属性或其他方法时，就要采用self.属性名或self.方法名的格式。
+    - 特殊方法：初始化方法
+```python
+class Chinese:  # 类的创建
+    eye = 'black'  # 类属性的创建
+    
+    def __init__(self, hometown):  # 类的初始化函数
+        self.hometown = hometown  # 实例属性的创建
+        print('程序持续更新中...')  # 初始化中的语句
+    
+    def born(self):  # 实例方法的创建
+        print('我生在%s;' % (self.hometown))
+
+
+wufeng = Chinese('广东')  # 类的实例化
+print(wufeng.eye)  # 打印实例属性
+wufeng.born()  # 实例方法的调用
+```
+- 面向对象编程
+    
+    向过程编程：首先分析出解决问题所需要的步骤（即“第一步做什么，第二步做什么，第三步做什么”），然后用函数实现各个步骤，再依次调用。
 ### 2019年12月24日
 ### 2019年12月25日
 ### 2019年12月26日
