第13天学习,练习_老师和父亲

--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -301,13 +301,96 @@ class Chinese:  # 类的创建
 
 
 wufeng = Chinese('广东')  # 类的实例化
-print(wufeng.eye)  # 打印实例属性
-wufeng.born()  # 实例方法的调用
+print(wufeng.eye)  # 打印实例属性,输出: black
+wufeng.born()  # 实例方法的调用,输出: 我生在广东;
 ```
 - 面向对象编程
     
     向过程编程：首先分析出解决问题所需要的步骤（即“第一步做什么，第二步做什么，第三步做什么”），然后用函数实现各个步骤，再依次调用。
 ### 2019年12月24日
+- 类的多层继承
+```python
+# 你可以继续拓展上面的例子，或往上（地球人），或往下（深圳人）。跑个代码体验一下：
+# 先阅读代码和注释，然后直接运行代码。
+class Earthman:
+    eye_number = 2
+
+# 中国人继承了地球人
+class Chinese(Earthman):
+    eye_color = 'black'
+
+# 广东人继承了中国人，同时也继承了地球人。
+class Cantonese(Chinese):
+    pass
+
+yewen = Cantonese()
+print(yewen.eye_number)  # 输出: 2
+print(yewen.eye_color)  # 输出: black
+```
+- 类的多重继承
+
+    越靠近子类（即越靠左）的父类，越亲近，越优先考虑。子类调用属性和方法时，会先在靠左的父类里找，找不到才往右找。
+```python
+class C0:
+    name = 'C0'
+
+class C1:
+    num = 1
+
+class C2(C0):
+    num = 2
+
+class C3:
+    name = 'C3'
+
+class C4(C1, C2, C3):
+    pass
+
+ins = C4()
+print(ins.name)  # 打印出 C0
+print(ins.num)  # 打印出 1
+```
+- 类的定制,新增代码
+```python
+class Chinese:
+    eye = 'black'
+    
+    def eat(self):
+        print('吃饭，选择用筷子。')
+
+class Cantonese(Chinese):  # 类的继承
+    native_place = 'guangdong'  # 类的定制
+    
+    def dialect(self):  # 类的定制
+        print('我们会讲广东话。')
+
+yewen = Cantonese()
+print(yewen.eye)    # 输出: black
+# 父类的属性能用
+print(yewen.native_place)    # 输出: guangdong
+# 子类的定制属性也能用
+yewen.eat()    # 输出: 吃饭，选择用筷子。
+# 父类的方法能用
+yewen.dialect()    # 输出: 我们会讲广东话。
+# 子类的定制方法也能用
+
+# 我们可以在子类下新建属性或方法，让子类可以用上父类所没有的属性或方法。这种操作，属于定制中的一种：新增代码。
+```
+- 类的定制,重写代码
+```python
+class Chinese:
+    def land_area(self, area):
+        print('我们居住的地方，陆地面积是%d万平方公里左右。' % area)
+
+class Cantonese(Chinese):
+    def land_area(self, area=960, rate=0.0188):  # 间接的对方法进行重写
+        Chinese.land_area(self, area * rate)  # 直接继承父类方法,再调整参数
+
+yewen = Cantonese()
+yewen.land_area()   # 输出: 我们居住的地方，陆地面积是18万平方公里左右。
+# 两个参数都有默认值，所以可以这么调用。
+```
+
 ### 2019年12月25日
 ### 2019年12月26日
 > 第99关
