第14天学习,流浪图书的旅途_未完

--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -392,6 +392,42 @@ yewen.land_area()   # 输出: 我们居住的地方，陆地面积是18万平方
 ```
 
 ### 2019年12月25日
+> 第14关 项目实操：PK小游戏（3）
+- 更符合编程习惯的方法`__str__(self)` `__str__`打印对象即可打印出该方法中的返回值，而无须再调用方法。
+
+    在Python中，如果方法名形式是左右带双下划线的，那么就属于特殊方法（如初始化方法），有着特殊的功能。
+
+    解释一下：只要在类中定义了__str__(self)方法，那么当使用print打印实例对象的时候，就会直接打印出在这个方法中return的数据。
+
+    可能有点绕，看代码会直观一点。我们直接把上述代码里的方法名show_info(self)替换成__str__(self)，留意最后一行调用的代码，然后点击运行：
+```python
+class Book:
+
+    def __init__(self, name, author, comment, state = 0):
+        self.name = name
+        self.author = author
+        self.comment = comment
+        self.state = state
+
+    def __str__(self): # 打印对象时的默认输出方法
+        if self.state == 0:
+            status = '未借出'
+        else:
+            status = '已借出'
+        return '名称：《%s》 作者：%s 推荐语：%s\n状态：%s ' % (self.name, self.author, self.comment, status)
+
+book1 = Book('像自由一样美丽','林达','你要用光明来定义黑暗，用黑暗来定义光明')
+# 传入参数，创建实例对象
+print(book1)
+# 直接打印对象即可，不能写成print(book1.__str__())
+
+"""
+输出:
+名称：《像自由一样美丽》 作者：林达 推荐语：你要用光明来定义黑暗，用黑暗来定义光明
+状态：未借出
+"""
+```
+
 ### 2019年12月26日
 > 第99关
 
