第15天学习,编码和文件读写

--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -253,8 +253,11 @@ while True:
 0. 针对知识点不熟造成的bug，要记得多复习，查阅笔记，针对性地做练习掌握用法。
 0. 针对思维不清的bug，要多用print()函数和#注释一步步地排查错误。
 0. 针对容易被忽略的例外情况从而被动掉坑的bug，可以用try...except语句让程序顺利运行。
-### 2019年12月23日
+
+## 目标四：学会“找对象”
+> 2019年12月23日
 > 类与对象1 
+- 我们都是中国人
 
 创建一个类
 ```python
@@ -427,9 +430,146 @@ print(book1)
 状态：未借出
 """
 ```
-
+## 目标五：用Python给朋友发个邮件
 ### 2019年12月26日
-> 第99关
+> 第15关 编码和文件读写
+- 计算机的"新华字典"
+
+> 编码
+- 二进制
+
+```
+00000000 表示状态0: 烽火全暗，一个敌人没有，平安无事，放心睡觉。
+11111111 表示状态255：烽火全亮，来了255个敌人。起来打啊！
+```
+bit和byte长得有点像，可别混淆！1 byte = 8 bit，也就是1字节等于8比特。
+
+而我们常看到的下载速度KB却是以字节每秒为单位显示的，1byte = 8bit，所以运营商说的带宽得先除以8，你的百兆宽带下载速度，也就是十几兆了。
+
+- 编码表
+
+`encode()和decode()`
+```python
+print('吴枫'.encode('utf-8'))  # b'\xe5\x90\xb4\xe6\x9e\xab'
+print('吴枫'.encode('gbk'))  # b'\xce\xe2\xb7\xe3'
+print(b'\xe5\x90\xb4\xe6\x9e\xab'.decode('utf-8'))  # 吴枫
+print(b'\xce\xe2\xb7\xe3'.decode('gbk'))  # 吴枫
+print(type('吴枫'))  # <class 'str'>
+print(type(b'\xce\xe2\xb7\xe3'))  #  <class 'bytes'>
+```
+`https://www.baidu.com/s?wd=%E5%90%B4%E6%9E%AB`
+```
+\xe5\x90\xb4\xe6\x9e\xab  # Python编码“吴枫”的结果
+%E5%90%B4%E6%9E%AB # 网址里的“吴枫”
+```
+最后我们再来看下ASCII编码，它不支持中文，所以我们来转换一个大写英文字母K。
+```python
+print('K'.encode('ASCII'))  # b'K'
+```
+> 文件读写 
+- 读取文件
+
+别忘了\在Python中是转义字符，所以时常会有冲突。为了避坑，Windows的绝对路径通常要稍作处理，写成以下两种格式；
+【第1步-开】打开文件，使用的是`open(file,mode,encoding)`函数。
+```python
+open('C:\\Users\\Ted\\Desktop\\test\\abc.txt')
+#将'\'替换成'\\'
+
+open(r'C:\Users\Ted\Desktop\test\abc.txt')
+#在路径前加上字母r
+```
+
+【第2步-读】 `file.read()` 方法
+
+```python
+file1 = open('/Users/Ted/Desktop/test/abc.txt','r',encoding='utf-8') 
+filecontent = file1.read()   
+print(filecontent)
+```
+
+【第3步-关】关闭文件，使用的是`close()`函数。
+```python
+# 打开文件
+file1 = open(file='/Users/Ted/Desktop/test/abc.txt', mode='r', encoding='utf-8')
+# 读文件
+filecontent = file1.read()
+# 显示内容
+print(filecontent)
+# 关闭文件
+file1.close()
+      
+```
+
+- 写入文件
+
+是这样子的，'w'写入模式会给你暴力清空掉文件，然后再给你写入。如果你只想增加东西，而不想完全覆盖掉原文件的话，就要使用'a'模式，表示append，你学过，它是追加的意思。
+```python
+file1 = open('/Users/Ted/Desktop/test/abc.txt', 'a',encoding='utf-8') 
+#以追加的方式打开文件abc.txt
+file1.write('张无忌\n')     
+#把字符串'张无忌'写入文件file1
+file1.write('宋青书\n')     
+#把字符串'宋青书'写入文件file1
+file1.close()            
+```
+
+有两个小提示：1.write()函数写入文本文件的也是字符串类型。2.在'w'和'a'模式下，如果你打开的文件不存在，那么open()函数会自动帮你创建一个
+
+为了避免打开文件后忘记关闭，占用资源或当不能确定关闭文件的恰当时机的时候，我们可以用到关键字with，之前的例子可以写成这样：
+```python
+# 普通写法
+file1 = open('abc.txt','a') 
+file1.write('张无忌') 
+file1.close()
+
+# 使用with关键字的写法
+with open('abc.txt','a') as file1:
+#with open('文件地址','读写模式') as 变量名:
+    #格式：冒号不能丢
+    file1.write('张无忌') 
+    #格式：对文件的操作要缩进
+    #格式：无需用close()关闭
+```
+- 小练习
+
+现在我们要把这里每一行的名字、分数也分开，这时需要我们使用`split()`来把字符串分开，它会按空格把字符串里面的内容分开。
+```python
+file1 = open('/Users/Ted/Desktop/scores.txt','r',encoding='utf-8') 
+file_lines = file1.readlines()
+file1.close()
+
+for i in file_lines:   #用for...in...把每一行的数据遍历  
+    data =i.split()    #把字符串切分成更细的一个个的字符串
+    print(data)        #打印出来看看
+```
+
+`split()`是把字符串分割的，而还有一个`join()`函数，是把字符串合并的。
+
+```python
+a=['c','a','t']
+b=''
+print(b.join(a))  # cat
+c='-'
+print(c.join(a))  # c-a-t
+```
+join()的用法是str.join(sequence)，str代表在这些字符串之中，你要用什么字符串连接，在这里两个例子，一个是空字符串，一个是横杠，sequence代表数据序列，在这里是列表a。
+
+
+### 2019年12月27日
+> 第16关 模块
+- 哆啦A梦的百宝箱
+### 2019年12月28日
+> 第17关 项目实操：收发邮件
+- 邮件还能这么发
+## 目标六：完成一个迷你产品
+### 2019年12月29日
+> 第18关 编程思维：产品思维
+- 需求你造吗?我造
+### 2019年12月30日
+> 第19关 项目实操：毕业项目
+- 高效偷懒的正确方式
+
+
 
 
 
