第16天学习,用法查询笔记

--- a/code/day16/模块.md
+++ b/code/day16/模块.md
@@ -103,7 +103,7 @@ if __name__ == '__main__':
 下载安装的方式是打开终端，Windows用户输入pip install + 模块名；苹果电脑输入：`pip3 install + 模块名`，点击enter即可。（需要预装python解释器和pip）
 
 `模块.__file__` 查看文件路径
-`模块.VERSION` 看版本(并不是所有模块这个属性)
+`模块.VERSION` 看版本(并不是所有模块都有这个属性)
 
 - 如何自学模块
 
@@ -188,6 +188,15 @@ with open('test.csv', newline = '', encoding = 'utf-8')  as f:
 写入数据的方式是这样的：
 
 先创建一个变量名为`writer`（也可以是其他名字）的实例，创建方式是`writer = csv.writer(x)`，然后使用`writer.writerow(列表)`就可以给csv文件写入一行列表中的内容。
+```python
+import csv
 
+with open('test3.csv', 'a', newline='', encoding='utf-8') as f:
+    writer = csv.writer(f)
+    writer.writerow(['4', '猫砂', '25', '1022', '886'])
+    writer.writerow(['5', '猫罐头', '18', '2234', '3121'])
+# ['4', '猫砂', '25', '1022', '886']
+# ['5', '猫罐头', '18', '2234', '3121']
+```
 到这里，最基本的csv表格读取和录入方法我们就已经学会了。csv模块虽然比random模块稍微复杂一点点，
 **但按照模块三问（这模块有哪些函数可用？有哪些属性或方法可用？使用格式是什么？）** 的学习方式，我们一样可以学会它的基本用法。
