--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -567,6 +567,165 @@ print(c.join(a))  # c-a-t
 
 > ### 第16关 模块
 `2019年12月27日` 哆啦A梦的百宝箱
+> 使用自己的模块
+- import语句
+
+麻雀虽小，五脏俱全。这段代码中基本上展现了所有的调用方式。
+```python
+# 【文件：story.py】
+
+sentence = '从前有座山，'
+
+def mountain():
+    print('山里有座庙，')
+
+class Temple:
+    sentence = '庙里有个老和尚，'
+    def reading(self):
+        print('在讲一个长长的故事。')
+
+# 【文件：main.py】
+
+import story as s
+
+for i in range(10):
+    print(s.sentence)
+    s.mountain()
+    A = s.Temple()
+    print(A.sentence)
+    A.reading()
+    print()
+```
+比如我们觉得import story太长，就可以用import story as s语句，意思是为“story”取个别名为“s”。
+- `from … import …` 语句
+
+`from … import …`语句可以让你从模块中导入一个指定的部分到当前模块。格式如下：
+```python
+# 【文件：test.py】
+def hi():
+    print('函数“hi”已经运行！')
+
+# 【文件：main.py】
+from test import hi  # 从模块test中导入函数“hi”
+hi()  # 使用函数“hi”时无需加上“模块.”前缀
+```
+当我们需要从模块中同时导入多个指定内容，也可以用逗号隔开，写成`from xx模块 import a,b,c`的形式。
+
+对于`from … import …`语句要注意的是，没有被写在import后面的内容，将不会被导入。
+
+当我们需要从模块中指定所有内容直接使用时，可以写成【`from xx模块 import *`】的形式，*代表“模块中所有的变量、函数、类”，
+```python
+from test import *
+
+print(a)  # 打印变量“a”
+
+hi()  # 调用函数“hi”
+
+A = Go2()  # 实例化“Go2”类
+print(A.a)  # 打印实例属性“a”
+A.do2()  # 调用实例方法“do2”
+```
+- `if __name__ == '__main__'`语句
+
+为了解释什么是`【if __name__ == '__main__'】`，我先给大家讲解一个概念“程序的入口”。
+
+```
+# 【文件：xx.py】
+
+代码块 ①……
+
+if __name__ == '__main__':
+    代码块 ②……
+```
+这里的`【if __name__ == '__main__'】`就相当于是 Python 模拟的程序入口。Python 本身并没有规定这么写，这是一种程序员达成共识的编码习惯。
+
+下载安装的方式是打开终端，Windows用户输入pip install + 模块名；苹果电脑输入：`pip3 install + 模块名`，点击enter即可。（需要预装python解释器和pip）
+
+`模块.__file__` 查看文件路径
+`模块.VERSION` 看版本(并不是所有模块都有这个属性)
+
+- 如何自学模块
+
+学习模块的核心是搞清楚模块的功能，也就是模块中的函数和类方法有什么作用，以及具体使用案例长什么样。
+
+用自学“random”模块为例，如果英文好的同学，可以直接阅读官方文档：https://docs.python.org/3.6/library/random.html
+
+例如random模块的关键知识（也就是比较有用的函数和类方法），可以做成这样的笔记
+```python
+import random  # 调用random模块
+
+a = random.random()  # 随机从0-1之间抽取一个小数
+print(a)
+
+a = random.randint(0,100)  # 随机从0-100之间抽取一个数字
+print(a)
+
+a = random.choice('abcdefg')  # 随机从字符串/列表/字典等对象中抽取一个元素（可能会重复）
+print(a)
+
+a = random.sample('abcdefg', 3) # 随机从字符串/列表/字典等对象中抽取多个不重复的元素
+print(a)
+
+items = [1, 2, 3, 4, 5, 6]  # “随机洗牌”，比如打乱列表
+random.shuffle(items)
+print(items)
+```
+另外，我们还可以使用`dir()`函数查看一个模块，看看它里面有什么变量、函数、类、类方法。
+```python
+import random  # 调用random模块
+
+print(dir(random))
+
+# ['BPF', 'LOG4', 'NV_MAGICCONST', 'RECIP_BPF', 'Random', 'SG_MAGICCONST', 'SystemRandom', 'TWOPI', '_BuiltinMethodType', '_MethodType', '_Sequence', '_Set', '__all__', '__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', '_acos', '_bisect', '_ceil', '_cos', '_e', '_exp', '_inst', '_itertools', '_log', '_os', '_pi', '_random', '_sha512', '_sin', '_sqrt', '_test', '_test_generator', '_urandom', '_warn', 'betavariate', 'choice', 'choices', 'expovariate', 'gammavariate', 'gauss', 'getrandbits', 'getstate', 'lognormvariate', 'normalvariate', 'paretovariate', 'randint', 'random', 'randrange', 'sample', 'seed', 'setstate', 'shuffle', 'triangular', 'uniform', 'vonmisesvariate', 'weibullvariate']
+```
+甚至不是模块，我们也可以用这种方式自学：dir(x)，可以查询到x相关的函数，x可以是模块，也可以是任意一种对象。
+```python
+a = ''  # 设置一个字符串
+print('字符串：')
+print(dir(a))  # 把字符串相关的函数展示出来
+
+a = []  # 设置一个列表
+print('列表：')
+print(dir(a))  # 把列表相关的函数展示出来
+
+a = {}  # 设置一个字典
+print('字典：')
+print(dir(a))  # 把字典相关的函数展示出来
+
+# 具体看 demo04.py
+```
+- 学习csv模块
+
+同时，我们可以搜索到csv模块的官方英文教程：
+
+https://docs.python.org/3.6/library/csv.html
+
+中文教程：https://yiyibooks.cn/xx/python_352/library/csv.html#module-csv
+```python
+import csv
+
+with open('test.csv', newline = '', encoding = 'utf-8')  as f:
+    #参数encoding = 'utf-8'防止出现乱码
+    reader = csv.reader(f)
+    for i in reader:
+        print(i)
+```
+以上就是读取csv文件的写法，接下来我们来看如何往csv格式文件写入数据。
+
+先创建一个变量名为`writer`（也可以是其他名字）的实例，创建方式是`writer = csv.writer(x)`，然后使用`writer.writerow(列表)`就可以给csv文件写入一行列表中的内容。
+
+```python
+import csv
+
+with open('test3.csv', 'a', newline='', encoding='utf-8') as f:
+    writer = csv.writer(f)
+    writer.writerow(['4', '猫砂', '25', '1022', '886'])
+    writer.writerow(['5', '猫罐头', '18', '2234', '3121'])
+# ['4', '猫砂', '25', '1022', '886']
+# ['5', '猫罐头', '18', '2234', '3121']
+```
+到这里，最基本的csv表格读取和录入方法我们就已经学会了。csv模块虽然比random模块稍微复杂一点点，
+**但按照模块三问（这模块有哪些函数可用？有哪些属性或方法可用？使用格式是什么？）** 的学习方式，我们一样可以学会它的基本用法。
 
 > ### 第17关 项目实操：收发邮件
 `2019年12月28日` 邮件还能这么发
