第16天学习,练习,事件记录器

--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -727,6 +727,33 @@ with open('test3.csv', 'a', newline='', encoding='utf-8') as f:
 到这里，最基本的csv表格读取和录入方法我们就已经学会了。csv模块虽然比random模块稍微复杂一点点，
 **但按照模块三问（这模块有哪些函数可用？有哪些属性或方法可用？使用格式是什么？）** 的学习方式，我们一样可以学会它的基本用法。
 
+- 练习 
+
+time模块中的时间戳（可进行日期运算）和格式化日期（可将日期转换成平常我们所见的格式）；
+
+倒计时的功能怎么用print()函数实现，属于之前没有讲过的方法，需要去搜索新的知识。
+
+- 用 python的print（flush=True）实现动态loading......效果
+```python
+import time                                                                           
+print("Loading",end = "")
+for i in range(6):
+    print(".",end = '',flush = True)
+    time.sleep(0.2)
+```
+range(5,-1,-1)的意思是：使用range产生一个列表，从5开始到-1之前结束。range的用法是range(开始,结束,步长)，因为我们是要从大到小，所以我们用-1表示步长为-1，意味着每次-1，如果是-2，那就是每次-2
+
+```python
+import time
+
+for i in range(11):
+    time.sleep(0.5)
+    print('\r当前进度：{0}{1}%'.format('▉' * i, (i * 10)), end='')
+print('加载完成！')
+# \r是将光标移到一行的开始，所以\r之后的内容会覆盖掉上次打印的内容，形成动态打印。
+# \b是backSpace 退格按钮
+```
+
 > ### 第17关 项目实操：收发邮件
 `2019年12月28日` 邮件还能这么发
 
