第16天学习,练习,进阶练习

--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -754,6 +754,32 @@ print('加载完成！')
 # \b是backSpace 退格按钮
 ```
 
+> 进阶练习
+
+- os 模块
+
+```python
+import os
+os.replace('test_new.txt', 'test.txt')
+# 语法：os.replace(file1,file2)，将file1重命名为file2，将其替代。`
+```
+
+看下参考代码吧。
+
+另外，建议你在本地编辑器试一试下面的这些方法：
+```python
+import os
+path = './test.py'
+os.getcwd()  # 返回当前工作目录
+os.listdir(path)   # 返回path指定的文件夹包含的文件或文件夹的名字的列表
+os.mkdir(path)  # 创建文件夹
+os.path.abspath(path)   # 返回绝对路径
+os.path.basename(path)   # 返回文件名
+os.path.isfile(path)   # 判断路径是否为文件
+os.path.isdir(path)   # 判断路径是否为目录
+```
+注： dir为单词directory（目录）的缩写。
+
 > ### 第17关 项目实操：收发邮件
 `2019年12月28日` 邮件还能这么发
 
