第17天学习,用法查询笔记

--- a/code/day17/收发邮件.md
+++ b/code/day17/收发邮件.md
@@ -31,7 +31,7 @@ server.quit()
 ```
 msg.as_string()是一个字符串类型：as_string()是将发送的信息msg变为字符串类型。
 
-对，**SMTP (Simple Mail Transfer Protocol)** 翻译过来是“简单邮件传输协议”的意思，SMTP 协议是由源服务器到目的地服务器传送邮件的一组规则。
+**SMTP (Simple Mail Transfer Protocol)** 翻译过来是“简单邮件传输协议”的意思，SMTP 协议是由源服务器到目的地服务器传送邮件的一组规则。
 ```python
 import smtplib
 
