--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -782,6 +782,149 @@ os.path.isdir(path)   # 判断路径是否为目录
 
 > ### 第17关 项目实操：收发邮件
 `2019年12月28日` 邮件还能这么发
+> 明确项目目标
+
+- 学会自学新模块
+- 提高大家学习知识的能力
+
+> 分析过程,拆解项目
+
+> 逐步执行,代码实现
+
+- > 版本1.0: 学习模块,发一封简单的邮件
+
+SMTP (Simple Mail Transfer Protocol) 翻译过来是“简单邮件传输协议”的意思，SMTP 协议是由源服务器到目的地服务器传送邮件的一组规则。
+
+我们可以搜索 “QQ邮箱 smtp设置” 得到host和port这两个参数。
+```python
+import smtplib
+
+# server = smtplib.SMTP()
+# server.connect('smtp.qq.com', 25)
+
+server = smtplib.SMTP_SSL()
+#如果端口是用SSL加密，请这样写代码。其中server是变量名
+server.connect('smtp.qq.com', 465)
+#如果出现编码错误UnicodeDecodeError，你可以这样写：server.connect('smtp.qq.com', 465,'utf-8')
+```
+提醒！QQ 邮箱一般默认关闭SMTP服务，我们得先去开启它。请打开https://mail.qq.com/，登录你的邮箱。然后点击位于顶部的【设置】按钮，选择【账户设置】，然后下拉到这个位置。
+
+**POP3/IMAP/SMTP/Exchange/CardDAV/CalDAV服务**
+
+开启服务： _POP3/SMTP服务 (如何使用 Foxmail 等软件收发邮件？)_
+
+需要通过手机短信验证,成功后会得到一个 授权码 请妥善保存
+
+“模块”和“包”的区别，模块（module）一般是一个文件，而包（package）是一个目录，一个包中可以包含很多个模块，可以说包是“模块打包”组成的。
+
+但为什么看到那个空文件，就能知道email是包呢？这是因为Python中的包都必须默认包含一个init.py的文件。
+
+init.py控制着包的导入行为。假如这个文件为空，那么我们仅仅导入包的话，就什么都做不了。所以直接import email是行不通的。
+
+所以，我们就需要使用from … import …语句，从email包目录下的【某个文件】引入【需要的对象】。比如从email包下的text文件中引入MIMEText方法。中文说起来有点复杂，看代码就懂了：
+```python
+from email.mime.text import MIMEText
+# 引入email包中构建文本内容的方法
+```
+我们就要用到构建邮件内容的email 模块。学习email 模块的过程我就不再展示了，请你自己动手
+
+例如这个报错信息：`ValueError: server_hostname cannot be an empty string or start with a leading dot.`
+
+直接在网络搜索这个报错信息，我们会得到结论：如果你的Python版本是3.7，很可能发生这种报错。因为Python 3.7修改了ssl.py，导致smtplib.SMTP_SSL也连带产生了问题。
+
+而解决方法也很简单：
+```
+# 改动这句代码
+server = smtplib.SMTP_SSL()
+
+# 在括号内加入host参数
+server = smtplib.SMTP_SSL(smtp_server)
+```
+
+如果你用的是QQ以外的其他邮箱，也可能会出现一种报错。比如利用我的企业邮箱的话，就会出现如下报错信息：
+
+`smtplib.SMTPException: No suitable authentication method found`
+
+搜索后，我们很快就会发现，解决方案是：在登录(login)之前调用starttls()方法就可以了。也就是在代码中加入这样一行：
+
+`server.starttls()`
+
+- > 版本2.0: 给自己发一封完整邮件
+
+邮件头（header，没错它也叫header）是这一块区域，包括主题、发件人、收件人等信息：
+```
+from email.header import Header
+
+msg['From'] = Header('xxx')
+msg['To'] = Header('xxx')
+msg['Subject'] = Header('xxx')
+```
+- > 版本3.0: 群发完整邮件
+
+只要你搜索一下“Python 群发邮件”，就有海量的信息供你参考。我这里讲三种群发的方式：
+#### 群发邮件
+1. 设置一个列表形式的变量
+2. 用while循环
+3. 调用csv
+
+
+一，是将收件人信箱的变量设置成一个可以装多个内容的列表：
+```python
+to_addrs = ['wufeng@qq.com','kaxi@qq.com']
+```
+需要注意的是，to_addrs变量也将作为参数被传入Header方法中：
+```
+msg['To'] = Header(to_addrs)
+```
+直接运行程序的话，这里就会发生错误：`AttributeError: 'list' object has no attribute 'decode'`。
+
+如果你有查看官方文档的好习惯，那么你会发现这是因为Header接受的第一个参数的数据类型必须要是字符串或者字节，列表不能解码。
+```python
+msg['to'] = Header(",".join(to_addrs)) 
+```
+`join()`的用法是`str.join(sequence)`，str代表在这些字符串之中你要用什么字符串来连接，你可以用逗号，空格，下划线等等。要将列表的元素合并，当然我们就直接使用逗号来连接了。
+
+#### 第二种方法是采用询问“是否继续输入邮箱地址”的方式，并用while循环来实现多个收件人的功能。
+```python
+# 发信方的信息：发信邮箱，QQ 邮箱授权码
+from_addr = input('请输入登录邮箱：')
+password = input('请输入邮箱授权码：')
+
+# 收信方邮箱
+to_addrs = []
+while True:
+    a = input('请输入收件人邮箱：n退出')
+    # b = input('是否继续输入，n退出，任意键继续：')
+    if a == 'n':
+        break
+    to_addrs.append(a)
+```
+#### 第三种,将邮箱地址写入csv模块的方法是write()，步骤是：1.引入csv模块；2.提供需要写入csv文件的数据，3.建文件并写入。
+```python
+# 创建一个邮件地址的文件
+import csv
+# 引用csv模块。
+data = [['wufeng ', 'wufeng@qq.com'], ['kaxi', 'kaxi@qq.com']]
+# 待写入csv文件的内容
+with open('to_addrs.csv', 'w', newline='') as f:
+    writer = csv.writer(f)
+    for row in data:
+        writer.writerow(row)
+# 读取邮件地址
+# 引用csv模块。(在前面已经引入了)
+with open('to_addrs.csv', 'r') as f:
+    reader = csv.reader(f)
+    for row in reader:
+        to_addrs = row[1]
+```
+此外，你还可以为这个程序加一段异常处理代码，也就是try...except...语句来帮助你更好地处理你遇到的问题。
+```python
+try:
+    server.sendmail(from_addr, to_addrs, msg.as_string())
+    print('恭喜，发送成功')
+except:
+    print('发送失败，请重试')
+```
 
 ## 目标六：完成一个迷你产品
 > ### 第18关 编程思维：产品思维
