第17天学习,练习_自制动态二维码

--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -926,6 +926,30 @@ except:
     print('发送失败，请重试')
 ```
 
+> 练习 自制动态二维码
+
+参考文章: https://github.com/sylnsfar/qrcode/blob/master/README-cn.md
+```python
+from MyQR import myqr
+import os
+
+# 这里是二维码的内容
+words = 'https://yigeqd.com/'
+
+version, level, qr_name = myqr.run(
+    words,  # 扫描二维码后，显示的内容，或是跳转的链接
+    version=1,  # 设置容错率
+    level='H',  # 控制纠错水平，范围是L、M、Q、H，从左到右依次升高
+    picture=None,  # 图片所在目录，可以是动图 ,'***.gif'
+    colorized=False,  # 黑白(False)还是彩色(True)
+    contrast=1.0,   # 用以调节图片的对比度，1.0 表示原始图片。默认为1.0。
+    brightness=1.0,  # 用来调节图片的亮度，用法同上。
+    save_name=None,   # 控制输出文件名，格式可以是 .jpg， .png ，.bmp ，.gif
+    save_dir=os.getcwd()   # 控制输出文件的路径(默认是在当前目录)
+)
+```
+
+
 ## 目标六：完成一个迷你产品
 > ### 第18关 编程思维：产品思维
 `2019年12月29日` 需求你造吗?我造
