第18天学习,模拟广告牌

--- a/code/用法查询笔记.md
+++ b/code/用法查询笔记.md
@@ -753,7 +753,17 @@ print('加载完成！')
 # \r是将光标移到一行的开始，所以\r之后的内容会覆盖掉上次打印的内容，形成动态打印。
 # \b是backSpace 退格按钮
 ```
-
+|转义字符|输出|
+|:---|:---|
+|\'|'|
+|\"|"|
+|\a|‘bi’响一声|
+|\b|退格|
+|\f|换页（在打印时）|
+|\n|回车，光标在下一行|
+|\r|换行，光标在上一行|
+|\t|八个空格|
+|\\|\|
 > 进阶练习
 
 - os 模块
@@ -953,6 +963,42 @@ version, level, qr_name = myqr.run(
 ## 目标六：完成一个迷你产品
 > ### 第18关 编程思维：产品思维
 `2019年12月29日` 需求你造吗?我造
+![](day18/notes/L-18_画板1副本21-2019116192610.png)
+
+![](day18/notes/L-18_画板1副本6-201911619946.png)
+
+![](day18/notes/L-18_画板1副本24-2019116193540.png)
+
+![](day18/notes/L-18_画板1副本25-2019116193549.png)
+
+![](day18/notes/L-18_画板1副本26-201911619364.png)
+
+> 进阶练习
+- 模拟广告牌
+```python
+# 请完成完成对广告牌的模拟，广告词可以自己起（可考虑将其封装成函数）。
+
+# 运行前可将第8行改为 for i in range(20) 控制一下循环次数。
+# 或者，可以直接运行，然后用“刷新网页”这种方法强行打断程序。
+
+import os, time
+
+
+def main():  # 用函数封装，可复用性会高一些（可在其他的.py文件里调用该函数。）
+    print('这是个死循环')
+    content = ' 风变编程，陪你一起学Python '  # 广告词可自定义。
+    while True:
+        # linux/os x系统 (clear)；windows 系统中，这个命令是 os.system('cls')，效果：清屏。
+        # os.system('clear')  # 完成清屏：清屏和打印结合起来，形成滚动效果。
+        # os.system('cls')  # 完成清屏：清屏和打印结合起来，形成滚动效果。
+        # print(content)
+        print("\r" + content, end='')  # "\r" 回到第一列的位置, end='' 结束位置不换行
+        content = content[1:] + content[0]  # 这行代码相当于：将字符串中第一个元素移到了最后一个。
+        time.sleep(0.25)  # 你可以改下时间，体会“循环周期”和“滚动速度”之间的关联。
+if __name__ == '__main__':  # 类里面学到的检测方法，在函数中其实也可以用。
+    main()
+
+```
 
 > ### 第19关 项目实操：毕业项目
 `2019年12月30日` 高效偷懒的正确方式
