第21天学习,Python爬虫精进课程目录

--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -1,2 +1,60 @@
-## 用法查询笔记
-2019年12月31日
+> ## 用法查询笔记-Python爬虫精进
+
+## 目标1初窥门径
+>### 第0关 认识爬虫
+`2019年12月31日` 重新定义网上冲浪
+```python
+import requests
+url = 'http://baidu.com'
+res = requests.get(url)
+print(res.text)
+```
+
+>### 第1关 HTML基础
+`2020年1月1日` 课堂: 我也可以写个网页
+
+## 目标二：爬虫小成
+>### 第2关 BeautifulSoup
+`2020年1月1日` 课堂: 爬虫初体验
+
+>### 第3关 BeautifulSoup实践
+`2020年1月1日` 课堂：解密吴氏私厨
+
+>### 第4关 json
+`2020年1月1日` 课堂：寻找周杰伦
+
+>### 第5关 带参数请求数据
+`2020年1月1日` 课堂：狂热粉丝
+
+>### 第6关 csv&excel
+`2020年1月1日` 课堂：爬到的数据存哪里？
+
+>### 第7关 爬取知乎文章
+`2020年1月1日` 课堂：复习：温故而知新
+
+## 目标三：更上层楼
+
+>### 第8关 cookies
+`2020年1月1日` 课堂：带着小饼干登录
+
+>### 第9关 Selenium
+`2020年1月1日` 课堂：指挥浏览器自动工作
+
+>### 第10关 定时与邮件
+`2020年1月1日` 课堂：让爬虫按时向你汇报
+
+## 目标四：拨云见日
+>### 第11关 协程
+`2020年1月1日` 课堂：建立爬虫军队
+
+>### 第12关 协程实践
+`2020年1月1日` 课堂：吃什么不会胖？
+
+>### 第13关 Scrapy框架
+`2020年1月1日` 课堂：各司其职的爬虫公司
+
+>### 第14关 Scrapy实操
+`2020年1月1日` 课堂：出任爬虫公司CEO
+
+>### 第15关 复习与反爬虫
+`2020年1月1日` 课堂：逢山开路与不甘庸碌
