第22天学习,爬虫初体验

--- a/code2/day03/爬虫初体验.md
+++ b/code2/day03/爬虫初体验.md
@@ -1,2 +1,84 @@
 ## 爬虫初体验
 `2020年1月2日`
+
+>### BeautifulSoup 是什么
+
+>### BeautifulSoup 怎么用
+BeautifulSoup库目前已经进阶到第4版（Beautiful Soup 4），由于它不是Python标准库，而是第三方库，需要单独安装它，不过，我们的学习系统已经安装好了。
+
+如果你是在自己的电脑上运行，需要在终端输入一行代码运行：pip install BeautifulSoup4。（Mac电脑需要输入pip3 install BeautifulSoup4）
+
+- 解析数据
+
+我们看看具体的用法。仍然以网站这个书苑不太冷为例（url：https://localprod.pandateacher.com/python-manuscript/crawler-html/spider-men5.0.html），假设我们想爬取网页中的书籍类型、书名、链接、和书籍介绍。
+
+根据之前所学的requests.get()，我们可以先获取到一个Response对象，并确认自己获取成功：
+
+```python
+# 调用requests库
+import requests
+# 获取网页源代码，得到的res是response对象
+res = requests.get('https://localprod.pandateacher.com/python-manuscript/crawler-html/spider-men5.0.html') 
+# 检查请求是否正确响应
+print(res.status_code)
+# 把res的内容以字符串的形式返回
+html = res.text 
+# 打印html
+print(html)
+```
+```python
+import requests
+# 引入BS库，下面的bs4就是beautifulsoup4
+from bs4 import BeautifulSoup
+
+res = requests.get('https://localprod.pandateacher.com/python-manuscript/crawler-html/spider-men5.0.html')
+html = res.text
+# 把网页解析为BeautifulSoup对象
+soup = BeautifulSoup(html, 'html.parser')
+print(type(html))
+print(type(soup))
+
+```
+你听我解释，事情是这样的：虽然`response.text`和`soup`打印出的内容表面上看长得一模一样，却有着不同的内心，它们属于不同的类：`<class 'str'>` 与`<class 'bs4.BeautifulSoup'>`。前者是字符串，后者是已经被解析过的`BeautifulSoup`对象。之所以打印出来的是一样的文本，是因为`BeautifulSoup`对象在直接打印它的时候会调用该对象内的str方法，所以直接打印 `bs` 对象显示字符串是`str`的返回结果。
+
+- 提取数据
+
+这一步，又可以分为两部分知识：`find()`与`find_all()`，以及Tag对象（标签对象）。
+
+`find()` / `find_all()`
+```python
+import requests
+from bs4 import BeautifulSoup
+url = 'https://localprod.pandateacher.com/python-manuscript/crawler-html/spder-men0.0.html'
+res = requests.get (url)
+print(res.status_code)
+soup = BeautifulSoup(res.text,'html.parser')
+# 使用find()方法提取首个<div>元素，并放到变量item里。
+item = soup.find('div') 
+# 打印item的数据类型
+print(type(item))
+# 打印item  
+print(item)    
+
+# # find_all()
+items = soup.find_all('div')   
+# 打印item的数据类型
+print(type(items))  # 输出: <class 'bs4.element.ResultSet'>
+# 打印item  
+print(items)    
+```
+
+
+我们用`Tag.text`提出Tag对象中的文字，用`Tag['href']`提取出URL。
+
+首先，请看举例中括号里的class_，这里有一个下划线，是为了和python语法中的类 `class`区分，避免程序冲突。当然，除了用`class`属性去匹配，还可以使用其它属性，比如`style`属性等。
+
+数据类型是`<class 'bs4.element.ResultSet>`， 前面说过可以把它当做列表list来看待。
+`<class 'bs4.element.Tag'>` 个人理解为 Dom 节点
+
+#### 对象的变化过程
+
+
+最后，我还想多说几句。在`BeautifulSoup`中，不止`find()`和`find_all()`，还有`select()`也可以达到相同目的。
+
+其实，在bs的官方文档中，`find()`与`find_all()`的方法，其实不止标签和属性两种，还有这些：
