--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -17,6 +17,36 @@ print(res.text)
 >### 第2关 BeautifulSoup
 `2020年1月1日` 课堂: 爬虫初体验
 
+
+### BeautifulSoup怎么用
+`BeautifulSoup`库目前已经进阶到第4版（Beautiful Soup 4），由于它不是Python标准库，而是第三方库，需要单独安装它，不过，我们的学习系统已经安装好了。
+
+如果你是在自己的电脑上运行，需要在终端输入一行代码运行：`pip install BeautifulSoup4`。（Mac电脑需要输入`pip3 install BeautifulSoup4`）
+
+- 解析数据
+
+```python
+import requests
+# 引入BS库，下面的bs4就是beautifulsoup4
+from bs4 import BeautifulSoup
+res = requests.get('https://localprod.pandateacher.com/python-manuscript/crawler-html/spider-men5.0.html') 
+html = res.text
+# 把网页解析为BeautifulSoup对象
+soup = BeautifulSoup(html,'html.parser') 
+print(soup)  #输出 <html>...</html>
+print(type(soup))  #输出 <class 'bs4.BeautifulSoup'>
+```
+
+- 提取数据
+
+我们仍然使用`BeautifulSoup`来提取数据。
+
+又可以分为两部分知识：find()与find_all()，以及Tag对象（标签对象）。
+
+首先，请看举例中括号里的class_，这里有一个下划线，是为了和python语法中的类 class区分，避免程序冲突。当然，除了用class属性去匹配，还可以使用其它属性，比如style属性等。
+
+数据类型是<class 'bs4.element.ResultSet>， 前面说过可以把它当做列表list来看待。
+
 >### 第3关 BeautifulSoup实践
 `2020年1月1日` 课堂：解密吴氏私厨
 
