第22天学习,练习_博客爬虫

--- a/code2/day03/爬虫初体验.md
+++ b/code2/day03/爬虫初体验.md
@@ -75,6 +75,7 @@ print(items)
 
 数据类型是`<class 'bs4.element.ResultSet>`， 前面说过可以把它当做列表list来看待。
 `<class 'bs4.element.Tag'>` 个人理解为 Dom 节点
+`<class 'NoneType'>`
 
 #### 对象的变化过程
 
