第22天学习,进阶练习_书店寻宝,博客文章

--- a/code2/day03/爬虫初体验.md
+++ b/code2/day03/爬虫初体验.md
@@ -70,7 +70,24 @@ print(items)
 
 
 我们用`Tag.text`提出Tag对象中的文字，用`Tag['href']`提取出URL。
-
+```python
+# 调用requests库
+import requests
+# 调用BeautifulSoup库 
+from bs4 import BeautifulSoup 
+# 返回一个Response对象，赋值给res
+res = requests.get('https://localprod.pandateacher.com/python-manuscript/crawler-html/spider-men5.0.html')
+# 把Response对象的内容以字符串的形式返回
+html = res.text
+# 把网页解析为BeautifulSoup对象
+soup = BeautifulSoup( html,'html.parser') 
+# 通过匹配标签和属性提取我们想要的数据
+items = soup.find_all(class_='books') 
+# 打印items
+print(items) 
+# 打印items的数据类型
+print(type(items)) 
+```
 首先，请看举例中括号里的class_，这里有一个下划线，是为了和python语法中的类 `class`区分，避免程序冲突。当然，除了用`class`属性去匹配，还可以使用其它属性，比如`style`属性等。
 
 数据类型是`<class 'bs4.element.ResultSet>`， 前面说过可以把它当做列表list来看待。
