第23天学习,豆瓣电影爬虫,一键下载电影

--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -49,6 +49,24 @@ print(type(soup))  #输出 <class 'bs4.BeautifulSoup'>
 
 >### 第3关 BeautifulSoup实践
 `2020年1月1日` 课堂：解密吴氏私厨
+- 练习 豆瓣爬虫
+```python
+import requests, bs4
+# 为躲避反爬机制，伪装成浏览器的请求头
+headers = {
+    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36'}
+url = 'http://baidu.com'
+res = requests.get(url, headers=headers)
+```
+- 进阶练习 一键下载电影
+```python
+from urllib.parse import quote
+a= '无名之辈'
+b= a.encode('gbk')
+# 将汉字，用gbk格式编码，赋值给b
+print(quote(b))  # %CE%DE%C3%FB%D6%AE%B1%B2
+# quote()函数，可以帮我们把内容转为标准的url格式，作为网址的一部分打开
+```
 
 >### 第4关 json
 `2020年1月1日` 课堂：寻找周杰伦
