第24天学习,JSON,寻找周杰伦

--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -70,6 +70,30 @@ print(quote(b))  # %CE%DE%C3%FB%D6%AE%B1%B2
 
 >### 第4关 json
 `2020年1月1日` 课堂：寻找周杰伦
+```python
+import requests
+r = requests.get("http://....")
+print(r.json())
+```
+而如果你想在Python语言中，实现列表/字典转json，json转列表/字典，则需要借助json模块。json模块不在我们的教学范围之内，所以不做展开。你可阅读它的官方文档来了解，地址在这里：https://docs.python.org/3/library/json.html
+```python
+# 引入json模块
+import json
+# 创建一个列表a
+a = [1,2,3,4]
+# 使用dumps()函数，将列表a转换为json格式的字符串，赋值给b
+b = json.dumps(a)
+# 打印b
+print(b)
+# 打印b的数据类型
+print(type(b))
+# 使用loads()函数，将json格式的字符串b转为列表，赋值给c
+c = json.loads(b)
+# 打印c
+print(c)
+# 打印c的数据类型
+print(type(c)) 
+```
 
 >### 第5关 带参数请求数据
 `2020年1月1日` 课堂：狂热粉丝
