--- a/code2/day06/练习_歌词爬虫.md
+++ b/code2/day06/练习_歌词爬虫.md
@@ -1,4 +1,6 @@
 ## 知识点回顾
+### input 函数的使用
+![](./img/CLeWOrD_cLe1RKMYPoqXPMddXlbwOrD_MQ1mURlqjrsitk6m.png)
 ### 如何解析json数据
 ![](./img/crawler-l3-27-201918.png)
 ### 带参数请求数据时如何寻找XHR
