第25天学习,进阶练习_头号粉丝2 用法查询笔记

--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -98,6 +98,18 @@ print(type(c))
 >### 第5关 带参数请求数据
 `2020年1月1日` 课堂：狂热粉丝
 
+设置请求头和简化请求参数
+```python
+import requests
+headers = {
+    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36'}
+url = 'http://baidu.com'
+# 请求参数是根据当前请求需要的参数来定的
+params = {'pagenum':'1'}
+res = requests.get(url, headers=headers,params=params)
+```
+
+
 >### 第6关 csv&excel
 `2020年1月1日` 课堂：爬到的数据存哪里？
 
