第26天学习,csv&excel,爬到的数据存哪里？

--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -113,6 +113,50 @@ res = requests.get(url, headers=headers,params=params)
 >### 第6关 csv&excel
 `2020年1月1日` 课堂：爬到的数据存哪里？
 
+```python
+# csv写入的代码：
+
+import csv
+csv_file = open('demo.csv','w',newline='')
+writer = csv.writer(csv_file)
+writer.writerow(['电影','豆瓣评分'])
+csv_file.close()
+```
+```python
+# csv读取的代码：
+
+import csv
+csv_file = open('demo.csv','r',newline='')
+reader=csv.reader(csv_file)
+for row in reader:
+    print(row)
+```
+```python
+# Excel写入的代码：
+
+import openpyxl 
+wb = openpyxl.Workbook() 
+sheet = wb.active
+sheet.title ='new title'
+sheet['A1'] = '漫威宇宙'
+rows = [['美国队长','钢铁侠','蜘蛛侠','雷神'],['是','漫威','宇宙', '经典','人物']]
+for i in rows:
+    sheet.append(i)
+print(rows)
+wb.save('Marvel.xlsx')
+```
+```python
+# Excel读取的代码：
+
+import openpyxl
+wb = openpyxl.load_workbook('Marvel.xlsx')
+sheet = wb['new title']
+sheetname = wb.sheetnames
+print(sheetname)
+A1_value = sheet['A1'].value
+print(A1_value)
+```
+
 >### 第7关 爬取知乎文章
 `2020年1月1日` 课堂：复习：温故而知新
 
