第28天学习,post,cookie,session

--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -165,6 +165,28 @@ print(A1_value)
 >### 第8关 cookies
 `2020年1月1日` 课堂：带着小饼干登录
 
+`post`请求和`cookie`
+[demo03](./day08/demo03.py)
+- 储存 cookie
+
+cookies 转化成字典的方法
+
+使用 `session` 参考 [demo04](./day08/demo04.py), [demo05](./day08/demo05.py)
+
+参考代码 [demo06](./day08/demo06.py), [demo07](./day08/demo07.py), [demo08](./day08/demo08.py)
+
+- 读取cookies
+```python
+cookies_txt = open('cookies.txt', 'r')
+#以reader读取模式，打开名为cookies.txt的文件。
+cookies_dict = json.loads(cookies_txt.read())
+#调用json模块的loads函数，把字符串转成字典。
+cookies = requests.utils.cookiejar_from_dict(cookies_dict)
+#把转成字典的cookies再转成cookies本来的格式。
+session.cookies = cookies
+#获取cookies：就是调用requests对象（session）的cookies属性。
+```
+
 >### 第9关 Selenium
 `2020年1月1日` 课堂：指挥浏览器自动工作
 
