--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -170,6 +170,10 @@ print(A1_value)
 - 储存 cookie
 
 cookies 转化成字典的方法
+```python
+import json
+json_str = json.dumps({"a":123})
+```
 
 使用 `session` 参考 [demo04](./day08/demo04.py), [demo05](./day08/demo05.py)
 
@@ -177,6 +181,9 @@ cookies 转化成字典的方法
 
 - 读取cookies
 ```python
+import requests
+import json
+session = requests.session()
 cookies_txt = open('cookies.txt', 'r')
 #以reader读取模式，打开名为cookies.txt的文件。
 cookies_dict = json.loads(cookies_txt.read())
@@ -185,6 +192,16 @@ cookies = requests.utils.cookiejar_from_dict(cookies_dict)
 #把转成字典的cookies再转成cookies本来的格式。
 session.cookies = cookies
 #获取cookies：就是调用requests对象（session）的cookies属性。
+```
+```python
+import requests
+import json
+def cookies_read():
+    cookies_txt = open('cookies.txt', 'r')
+    cookies_dict = json.loads(cookies_txt.read())
+    cookies = requests.utils.cookiejar_from_dict(cookies_dict)
+    return (cookies)
+    # 以上4行代码，是cookies读取。
 ```
 
 >### 第9关 Selenium
