第28天学习,练习_小说推荐 filter的使用

--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -203,6 +203,21 @@ def cookies_read():
     return (cookies)
     # 以上4行代码，是cookies读取。
 ```
+练习_小说推荐
+```python
+# 过滤器fliter过滤数字
+link = 'https://www.xslou.com/yuedu/9356/'
+
+# 字符串link过滤出数字id（9356）
+id_list = list(filter(str.isdigit,link))
+book_id = ''.join(id_list)
+
+# 步骤解析：1、filter()过滤数字 2、filter对象转列表 3、列表转字符串 
+# filter(str.isdigit,字符串) 
+# 第一个参数用来判断字符串的单个元素是否是数字，数字保留
+# filter()返回的是对象，需要用list()函数转换成列表
+# ''.join(列表)将列表转换成字符串
+```
 
 >### 第9关 Selenium
 `2020年1月1日` 课堂：指挥浏览器自动工作
