第28天学习,练习_小说推荐 ''.split()

--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -217,6 +217,11 @@ book_id = ''.join(id_list)
 # 第一个参数用来判断字符串的单个元素是否是数字，数字保留
 # filter()返回的是对象，需要用list()函数转换成列表
 # ''.join(列表)将列表转换成字符串
+
+# 方法二
+href='https://www.xslou.com/yuedu/9356/'
+# 分割最后位置的数字,拿到book_id
+book_id = href.split('/')[-2]
 ```
 
 >### 第9关 Selenium
