--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -227,6 +227,12 @@ book_id = href.split('/')[-2]
 >### 第9关 Selenium
 `2020年1月1日` 课堂：指挥浏览器自动工作
 
+首先，和其它所有Python库一样，`selenium`需要安装，方法也很简单， 使用`pip`安装。
+```shell script
+pip install selenium # Windows电脑安装selenium
+pip3 install selenium # Mac电脑安装selenium
+```
+
 >### 第10关 定时与邮件
 `2020年1月1日` 课堂：让爬虫按时向你汇报
 
