第29天学习,day08进阶练习-未完

--- a/code2/day08/进阶练习_自制翻译器.md
+++ b/code2/day08/进阶练习_自制翻译器.md
@@ -28,12 +28,12 @@
 但这道题并不需要用到小饼干，因为不需要登录不需要账号密码等。
 主要考查的还是Post的用法。
 
-注意哦 ლ(╹◡╹ლ)
+**注意哦 ლ(╹◡╹ლ)**
 有道翻译有反爬虫机制，它使用了加密技术。如果你的程序报错，你可以通过搜索、查阅资料找到解决方案：尝试把访问的网址中“/translate_o”中的“_o”删除。
 服务器返回的内容，是json的格式。我们可以用处理列表、处理字典的手段来提取翻译。
 
 ### 第三步：写代码
 
-你可以在浏览器的[network]-[Headers]-[General]里找到需要访问的网址，在[network]-[Headers]-[From data]里找到需要上传的数据。
+你可以在浏览器的`[network]-[Headers]-[General]`里找到需要访问的网址，在`[network]-[Headers]-[From data]`里找到需要上传的数据。
 
 如果没思路，可以偷偷看下提示哦～
