第29天学习,day08进阶练习-未完

--- a/code2/day08/进阶练习_自制翻译器.md
+++ b/code2/day08/进阶练习_自制翻译器.md
@@ -16,21 +16,21 @@
 实现一键翻译的功能，最简单的方案便是爬虫。在此，我们选择的网站是有道翻译。http://fanyi.youdao.com/
 ![](img2_1/2019-01-24-17-50-41.png)
 这个页面，你在左边输入文字，那么浏览器会把你输入的信息传输给服务器。再返回对应的内容。
-这就是一个典型的Post操作。
+这就是一个典型的`Post`操作。
 
 我们在Headers也可以看到“Request Method: POST”哦
 ![](img2_1/2019-01-24-17-03-52.png)
-在前几关练习我们用的都是Get方式请求，Post是另一种常见的方式，课上已经学过其用法，在此不多赘述。
-**Get是向服务器发索取数据的一种请求，而Post是向服务器提交数据的一种请求**
+在前几关练习我们用的都是`Get`方式请求，`Post`是另一种常见的方式，课上已经学过其用法，在此不多赘述。
+**Get是向服务器发索取数据的一种请求，而`Post`是向服务器提交数据的一种请求**
 
-虽然第八关我们主要讲的是Cookies，
+虽然第八关我们主要讲的是`Cookies`，
 **Cookies用于服务器实现会话，用户登录及相关功能时进行状态管理**
 但这道题并不需要用到小饼干，因为不需要登录不需要账号密码等。
 主要考查的还是Post的用法。
 
 **注意哦 ლ(╹◡╹ლ)**
-有道翻译有反爬虫机制，它使用了加密技术。如果你的程序报错，你可以通过搜索、查阅资料找到解决方案：尝试把访问的网址中“/translate_o”中的“_o”删除。
-服务器返回的内容，是json的格式。我们可以用处理列表、处理字典的手段来提取翻译。
+有道翻译有反爬虫机制，它使用了加密技术。如果你的程序报错，你可以通过搜索、查阅资料找到解决方案：尝试把访问的网址中“`/translate_o`”中的“`_o`”删除。
+服务器返回的内容，是`json`的格式。我们可以用处理列表、处理字典的手段来提取翻译。
 
 ### 第三步：写代码
 
