--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -223,6 +223,13 @@ href='https://www.xslou.com/yuedu/9356/'
 # 分割最后位置的数字,拿到book_id
 book_id = href.split('/')[-2]
 ```
+```python
+# 分别代表什么模式?
+f'f'
+r'r'
+u'u'
+'\033[0m'
+```
 
 >### 第9关 Selenium
 `2020年1月1日` 课堂：指挥浏览器自动工作
