--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -230,6 +230,20 @@ r'r'
 u'u'
 '\033[0m'
 ```
+参考代码 [demo09](./day09/红包分配.py)
+```python
+import random
+# 从0-100(不包括100)随机取10个数字
+li = random.sample(range(100),5)
+# 随机 [9, 22, 13, 86, 88] 
+# lambda 表达式
+lis =[i*10 for i in li]
+# 随机 [90, 220, 130, 860, 880]
+print(li,lis)
+```
+> input() 数据类型报错的约束方法? 
+
+> lambda 表达式学习?
 
 >### 第9关 Selenium
 `2020年1月1日` 课堂：指挥浏览器自动工作
