第29天学习,用法查询笔记 random,lambda

--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -245,6 +245,26 @@ print(li,lis)
 
 > lambda 表达式学习?
 
+- random 
+
+原文地址: https://www.cnblogs.com/dylancao/p/8202888.html 
+```
+random中的一些重要函数的用法：
+1 )、random() 返回0<=n<1之间的随机实数n；
+2 )、choice(seq) 从序列seq中返回随机的元素；
+3 )、getrandbits(n) 以长整型形式返回n个随机位；
+4 )、shuffle(seq[, random]) 原地指定seq序列；
+5 )、sample(seq, n) 从序列seq中选择n个随机且独立的元素；
+　详细介绍：
+random.random()函数是这个模块中最常用的方法了，它会生成一个随机的浮点数，范围是在0.0~1.0之间。
+random.uniform()正好弥补了上面函数的不足，它可以设定浮点数的范围，一个是上限，一个是下限。
+random.randint()随机生一个整数int类型，可以指定这个整数的范围，同样有上限和下限值，python random.randint。
+random.choice()可以从任何序列，比如list列表中，选取一个随机的元素返回，可以用于字符串、列表、元组等。
+random.shuffle()如果你想将一个序列中的元素，随机打乱的话可以用这个函数方法。
+random.sample()可以从指定的序列中，随机的截取指定长度的片断，不作原地修改。
+```
+
+
 >### 第9关 Selenium
 `2020年1月1日` 课堂：指挥浏览器自动工作
 
