习题文档地址

--- a/code/深度理解笔记.md
+++ b/code/深度理解笔记.md
@@ -16,3 +16,6 @@ print('程序结束')
     大概就是,内部不再写死一个值,都交由外层去控制; 对外提供API
     
     四个大概念: 配置项,属性,方法,钩子
+
+习题文档地址:[习题文档地址](https://shimo.im/sheets/cJvjcGVQpcXRgJkc/PK35O/)
+
